[package]
name = "poll-server"
version = "0.1.0"
authors = ["UE2020 <ttmmiizz101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv = { version = "*", features = ["bincode-value"] }
serde = "*"
actix-web = "3"
actix-files = "*"
serde_json = "*"
uuid = { version = "0.8.2", features = ["v4"] }
