[package]
name = "poll-server"
version = "0.1.0"
authors = ["UE2020 <ttmmiizz101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
actix-web = "3"
actix-files = "0.5.0"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }
actix-storage = { version = "0.2.0", features = ["all"] }
actix-storage-sled = { version = "0.2.0" }
env_logger = "0.9.0"
log = "0.4.14"
sha2 = "0.9.5"
hex = "0.4.3"